[gd_scene load_steps=9 format=3 uid="uid://nr5v61tjidr5"]

[ext_resource type="Texture2D" uid="uid://du7a4dgnx41mr" path="res://kenney/PNG/Retina/character_squarePurple.png" id="1_nt0ne"]
[ext_resource type="Script" path="res://boss.gd" id="1_t60wx"]
[ext_resource type="Texture2D" uid="uid://da8yq3rj582kr" path="res://kenney/PNG/Retina/character_handPurple.png" id="2_bbegx"]
[ext_resource type="Texture2D" uid="uid://dgdkmxx6kk35n" path="res://kenney/PNG/Retina/item_shieldRound.png" id="3_nc55p"]

[sub_resource type="Animation" id="Animation_sqb01"]
resource_name = "lanzar2"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CharacterSquarePurple:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CharacterSquarePurple/CharacterHandPurple:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-30, 19), Vector2(77, -14), Vector2(-4.99999, -81), Vector2(98, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CharacterSquarePurple/CharacterHandPurple/rueda:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch_barrel"
}]
}

[sub_resource type="Animation" id="Animation_fm825"]
resource_name = "reposo"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CharacterSquarePurple/CharacterHandPurple:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32, 20), Vector2(-34, 33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CharacterSquarePurple/CharacterHandPurple/rueda:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v5xw1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CharacterSquarePurple/CharacterHandPurple:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CharacterSquarePurple/CharacterHandPurple/rueda:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63ctg"]
_data = {
"RESET": SubResource("Animation_v5xw1"),
"lanzar2": SubResource("Animation_sqb01"),
"reposo": SubResource("Animation_fm825")
}

[node name="Boss" type="Node2D"]
position = Vector2(640, 108)
script = ExtResource("1_t60wx")

[node name="ItemShieldRound2" type="Sprite2D" parent="."]
position = Vector2(-211, 53)
texture = ExtResource("3_nc55p")

[node name="ItemShieldRound" type="Sprite2D" parent="ItemShieldRound2"]
position = Vector2(-166, 0)
texture = ExtResource("3_nc55p")

[node name="ItemShieldRound5" type="Sprite2D" parent="ItemShieldRound2/ItemShieldRound"]
position = Vector2(132, -78)
texture = ExtResource("3_nc55p")

[node name="ItemShieldRound3" type="Sprite2D" parent="ItemShieldRound2/ItemShieldRound"]
position = Vector2(84, 6)
texture = ExtResource("3_nc55p")

[node name="ItemShieldRound4" type="Sprite2D" parent="ItemShieldRound2/ItemShieldRound/ItemShieldRound3"]
position = Vector2(-36, -81)
texture = ExtResource("3_nc55p")

[node name="CharacterSquarePurple" type="Sprite2D" parent="."]
position = Vector2(-114, 12)
texture = ExtResource("1_nt0ne")

[node name="CharacterHandPurple" type="Sprite2D" parent="CharacterSquarePurple"]
position = Vector2(-32, 20)
texture = ExtResource("2_bbegx")

[node name="rueda" type="Sprite2D" parent="CharacterSquarePurple/CharacterHandPurple"]
visible = false
position = Vector2(43, 30)
texture = ExtResource("3_nc55p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_63ctg")
}
movie_quit_on_finish = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
